salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/MaxDoot_Inbound__e.object-meta.xml
<CustomObject>
    <description>High-volume platform event published when heydoot pushes an inbound message or a delivery/read status update.</description>
    <label>MaxDoot Inbound</label>
    <pluralLabel>MaxDoot Inbound Events</pluralLabel>
</CustomObject>