salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>