salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <label>Channel Id</label>
    <description>heydoot channel id the message arrived on.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>