salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Text</type>
    <length>20</length>
</CustomField>