salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <description>message | status</description>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>