salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <label>From Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>