salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Group Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>