salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>