salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_URL__c</fullName>
    <label>Media URL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>