salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <description>heydoot message id (idempotency key).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>