salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Msg_Status__c.field-meta.xml
<CustomField>
    <fullName>Msg_Status__c</fullName>
    <label>Message Status</label>
    <description>For status events: Sent | Delivered | Read | Failed.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>