salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/Timestamp_Iso__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Iso__c</fullName>
    <label>Timestamp ISO</label>
    <description>ISO-8601 timestamp from heydoot.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>