salesforce/force-app/main/default/objects/MaxDoot_Inbound__e/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <label>To Number</label>
    <type>Text</type>
    <length>40</length>
</CustomField>